--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.9.1",
     "sass": "^1.54.0",
     "vue": "^3.2.37"
   },
